--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.14",
     "@types/react-dom": "^17.0.6",
+    "prettier": "^2.3.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.34.1",
